--- a/KR/src/main/webapp/WEB-INF/style.css
+++ b/KR/src/main/webapp/WEB-INF/style.css
@@ -10,6 +10,18 @@
 .nowrap {
     white-space: nowrap;
 }
+.types {
+    display: grid;
+    grid-template-columns: repeat(10,10%);
+    white-space: nowrap;
+    word-spacing: 10px;
+    font-size: 25px;
+    margin: 20px;
+}
+.wish {
+    display: grid;
+    grid-template-rows: repeat(10,10%);
+}
 .field {
     display: flex;
     margin-left: 20px;
@@ -18,4 +30,27 @@ label {
     display: inline-block;
     width: 80px;
     text-align: left;
+}
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #808080;
+    color: black;
+    text-align: center;
+}
+a:link {
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+    color: blue;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
 }
